# Estructuras-de-Datos

./: CMakeLists.txt  README.md
Arbol de expresion/: Node.h  a.out  main.cpp  mi_pila.h  pila_arbol.cpp
Comparativa-TDA/: Comparativa.xlsx
Polizas Objets/: a.out  automovile.h  house.h  life.h  main.cpp  user.h
Polizas Structs/: main.c  printables.py
Polizas Structs/proyecto_Final/: a.out  copu_main.c  test.c
Tarea 4/: a.out  arreglo.cpp  arreglo_lista.cpp  arreglo_lista.hpp  prueba
Tarea 5/: pila.cpp  pila.h
arreglo-Lista/: arreglo.cpp
busqueda-binaria/: a.out  busquedaBinaria.cpp
circle-sort/: circleSort.cpp
linked-List/: node.cpp
node/: a.out  node.cpp  node.h
quickSort/: a.out  quicksort.cpp
tarea 1/: arreglo.cpp  main.cpp
tarea5/: arreglo_pila.cpp  arreglo_pila.hpp
tarea5 2/: arreglo_pila.cpp  arreglo_pila_test.cpp
test/: a.out  directory.cpp  nano.cpp  test.cpp
